# CodingDojoVE20190509

./: CMakeLists.txt  README.md  kata.cpp  main.cpp
